# GoInfomaniakHackaton2025

./: README.md  api.dockerfile  debug.py  go.mod  logging.yaml  main.go  pyproject.toml  typer
Hackathon-2025/: .gitignore  logging.yaml  test.py
Hackathon-2025/api/: main.py
Hackathon-2025/api/routers/: mail.py  mailDaly.py
Hackathon-2025/chrome_ext/: background.js  content_script.js  manifest.json  popup.html  popup.js
Hackathon-2025/chrome_ext/shared/: chrome.js  mail.js
Hackathon-2025/common/: mail_utils.py  openai_clients.py
Hackathon-2025/common/docs/: event_suggestion.md
Hackathon-2025/common/ik_apis/: __init__.py  mail.py
api/: main.py
api/dependencies/: ik_api.py
api/routers/: daily.py  mail.py  ping.py
chrome_ext/: background.js  content_script.js  manifest.json  popup.html  popup.js
chrome_ext/shared/: chrome.js  mail.js
common/: constants.py  mail_utils.py  openai_clients.py
common/docs/: event_suggestion.md  summary_emails.md
common/ik_apis/: __init__.py  mail.py
common/models/request/: mail.py
common/models/response/: mail.py
